--- a/package.json
+++ b/package.json
@@ -26,5 +26,10 @@
   "bugs": {
     "url": "https://github.com/GowthamSiddarth/flux-backend/issues"
   },
-  "homepage": "https://github.com/GowthamSiddarth/flux-backend#readme"
+  "homepage": "https://github.com/GowthamSiddarth/flux-backend#readme",
+  "devDependencies": {
+    "body-parser": "^1.18.3",
+    "express": "^4.16.3",
+    "mongoose": "^5.3.0"
+  }
 }
