--- a/package.json
+++ b/package.json
@@ -28,8 +28,11 @@
   },
   "homepage": "https://github.com/GowthamSiddarth/flux-backend#readme",
   "devDependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
+    "express-jwt": "^5.3.1",
+    "jsonwebtoken": "^8.3.0",
     "mongoose": "^5.3.0",
     "nodemon": "^1.18.4"
   }
